@@ -17,6 +17,7 @@ https://github.com/elastic/apm-agent-python/compare/v1.0.0.dev2\...master[Check 
  * ensured that transaction data is also passed through processors ({pull}84[#84])
  * added `uninstrument` function to reverse instrumentation,
    and exposed both `instrument` and `uninstrument` as public API in the `elasticapm` namespace  ({pull}90[#90])
+ * added setting to disable SSL certificate verification ({pull}97[#97])
 
 [[release-v1.0.0.dev2]]
 [float]
